--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "tailwindcss": "^1.7.3",
     "vue": "^3.0.0-0"
   },
   "devDependencies": {
